# cookiecutter-rust-python

./: Readme.md  cookiecutter.json  license.md
hooks/: post_gen_project.py
{{ cookiecutter.project_name }}/: .rusty-hook.toml  Cargo.toml  Readme.md  pyproject.toml
{{ cookiecutter.project_name }}/.helix/: layout.kdl
{{ cookiecutter.project_name }}/{{ cookiecutter.bindings_project_dir }}/: Cargo.toml
{{ cookiecutter.project_name }}/{{ cookiecutter.bindings_project_dir }}/src/: lib.rs
{{ cookiecutter.project_name }}/{{ cookiecutter.python_project_dir }}/docs/: conf.py  index.md
{{ cookiecutter.project_name }}/{{ cookiecutter.python_project_dir }}/src/{{ cookiecutter.python_project_slug }}/: __init__.py
{{ cookiecutter.project_name }}/{{ cookiecutter.rust_project_dir }}/: Cargo.toml
{{ cookiecutter.project_name }}/{{ cookiecutter.rust_project_dir }}/benches/: benchmark.rs
{{ cookiecutter.project_name }}/{{ cookiecutter.rust_project_dir }}/src/: lib.rs
