[workspace]
members = ["{{ cookiecutter.bindings_project_dir }}", "{{ cookiecutter.rust_project_dir }}"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["{{ cookiecutter.author }}"]
description = "{{ cookiecutter.description }}"
# documentation = "https://example.com/bar"

[workspace.dependencies]
ndarray = { version = "0.15.6", features = ["rayon", "approx"] }
itertools = "0.12.0"
criterion = { version = "0.5.1", features = ["html_reports"] }
ndarray-npy = "0.8.1"
plotters = "0.3.5"
tracing = "0.1.37"
rusty-hook = "0.11.2"
