[package]
name = "{{ cookiecutter.rust_project_slug }}"
version = "0.1.0"
edition = "2021"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { workspace = true, features = ["rayon", "approx"] }
itertools = { workspace = true }

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
ndarray-npy.workspace = true
plotters.workspace = true
rusty-hook = "0.11.2"
tracing.workspace = true

[[bench]]
harness = false
name = "benchmark"
